--- a/hotel.html
+++ b/hotel.html
@@ -463,9 +463,9 @@
           direction: "horizontal",
           loop: true,
           speed: 1500,
-          // autoplay: {
-          //   delay: 5000,
-          // },
+          autoplay: {
+            delay: 5000,
+          },
           // If we need pagination
           pagination: {
             el: ".slider__pagination",
