--- a/package.html
+++ b/package.html
@@ -358,7 +358,7 @@
                   900: {
                       slidesPerView: 2,
                   },
-                  1500: {
+                  1440: {
                       slidesPerView: 3,
                   },
                   1600: {
@@ -424,7 +424,9 @@
               loop: true,
               slidesPerView: 1,
               breakpoints: {
-              
+                768: {
+                      slidesPerView: 2,
+                  },
                   1200: {
                       slidesPerView: 3,
                   },
