--- a/event.html
+++ b/event.html
@@ -17,7 +17,7 @@
       <header id="header">
         <div class="headerWrap">
           <h1>
-            <a href="#"><img src="images/logo-w.png" alt="로고" /></a>
+            <a href="index.html"><img src="images/logo-w.png" alt="로고" /></a>
           </h1>
           <nav class="innerNav">
             <ul>
