--- a/reserve.html
+++ b/reserve.html
@@ -61,10 +61,10 @@
           <div class="login">
             <p>SNS 로그인</p>
             <div class="socialIcon">
-              <img src="./images/a_ka.png" alt="" />
-              <img src="./images/a_n.png" alt="" />
-              <img src="./images/a_f.png" alt="" />
-              <img src="./images/a_a.png" alt="" />
+              <img src="./images/a_ka.png" alt="카카오톡로고" />
+              <img src="./images/a_n.png" alt="네이버로고" />
+              <img src="./images/a_f.png" alt="페이스북로고" />
+              <img src="./images/a_a.png" alt="애플로고" />
             </div>
 
             <form>
@@ -132,16 +132,16 @@
           <div class="social">
             <div class="imgs">
               <div class="img">
-                <img src="./images/facebook.png" alt="" />
+                <img src="./images/facebook.png" alt="페이스북로고" />
               </div>
               <div class="img">
-                <img src="./images/instagram.png" alt="" />
+                <img src="./images/instagram.png" alt="인스타그램로고" />
               </div>
               <div class="img">
-                <img src="./images/youtube.png" alt="" />
+                <img src="./images/youtube.png" alt="유튜브로고" />
               </div>
             </div>
-            <img src="./images/logo-b.png" alt="" />
+            <img src="./images/logo-b.png" alt="트래블플러스로고" />
           </div>
         </div>
       </footer>
