--- a/customer.html
+++ b/customer.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/sub.css" />
@@ -38,6 +41,7 @@
                         <li><a href="hotel.html">호텔</a></li>
                         <li><a href="event.html">이벤트</a></li>
                         <li><a href="customer.html">고객센터</a></li>
+                        <li><a href="reserve.html">예약 및 조회</a></li>
                     </ul>
                 </div>
 
