--- a/hotel.html
+++ b/hotel.html
@@ -2,7 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>HOTEL</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -43,6 +46,7 @@
               <li><a href="hotel.html">호텔</a></li>
               <li><a href="event.html">이벤트</a></li>
               <li><a href="customer.html">고객센터</a></li>
+              <li><a href="reserve.html">예약 및 조회</a></li>
             </ul>
           </div>
 
