--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- visual -->
       <section id="visual">
         <div class="video-section">
-          <video class="video-background" autoplay muted loop preload="auto">
+          <video class="video-background" autoplay muted loop>
             <source src="images/visual1.mp4" type="video/mp4" />
           </video>
           <div class="visualTxt">
