--- a/package.html
+++ b/package.html
@@ -363,6 +363,9 @@
                   768: {
                       slidesPerView: 2,
                   },
+                  1200: {
+                      slidesPerView: 3,
+                  },
                   1440: {
                       slidesPerView: 4,
                   },
@@ -426,8 +429,11 @@
               loop: true,
               slidesPerView: 1,
               breakpoints: {
-                768: {
+               600: {
                       slidesPerView: 2,
+                  },
+                 900: {
+                      slidesPerView: 3,
                   },
                   1440: {
                       slidesPerView: 4,
