--- a/event.html
+++ b/event.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/sub.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="icon" sizes="16x16" href="images/favicon.png" type="image/png">
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/common.js"></script>
   </head>
